Added slider gallery in graphics page

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
             3rd Place Winner (Professional Category)
           </div>
 
-          <p class="text-lg md:text-xl font-semibold ">
+          <p class="text-lg md:text-xl md:font-semibold ">
             Prize Received:<br/>
             Furniture Design Category<br/>
             Master Course at Accademia Riaci, Italy
@@ -167,13 +167,13 @@
           <div>
             <p class="font-bold text-xl md:text-2xl pb-5">2017</p>
             <p class="font-bold text-xl md:text-2xl">Bachelor of Fine Arts Major in Industrial Design</p>
-            <p class="font-semibold text-lg md:text-xl">University of Santo Tomas, Philippine</p>
+            <p class="text-lg md:text-xl md:font-semibold">University of Santo Tomas, Philippine</p>
           </div>
 
           <div>
             <p class="font-bold text-xl md:text-2xl pb-5">2022</p>
             <p class="font-bold text-xl md:text-2xl">Interior Design</p>
-            <p class="font-semibold text-lg md:text-xl">12-Weeks Course in Accademia Riaci, Italy</p>
+            <p class="text-lg md:text-xl md:font-semibold">12-Weeks Course in Accademia Riaci, Italy</p>
           </div>
         </div>
       </div>
@@ -184,7 +184,7 @@
   <!-- ABOUT ME 4 SECTION -->
   <div class="about-me-section grid grid-cols-1 md:grid-cols-2">
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-52">
-      <p class="font-bold text-lg md:text-2xl lg:text-3xl">My definition of fun</p>
+      <p class="font-bold text-xl md:text-2xl lg:text-3xl">My definition of fun</p>
       <p class="md:text-lg">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
@@ -192,7 +192,7 @@
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-36">
-      <p class="font-bold text-lg md:text-2xl lg:text-3xl">How I spend my weekend</p>
+      <p class="font-bold text-xl md:text-2xl lg:text-3xl">How I spend my weekend</p>
       <p class="md:text-lg">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
@@ -200,7 +200,7 @@
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-52">
-      <p class="font-bold text-lg md:text-2xl lg:text-3xl">What I am not</p>
+      <p class="font-bold text-xl md:text-2xl lg:text-3xl">What I am not</p>
       <p class="md:text-lg">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
@@ -208,7 +208,7 @@
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-36">
-      <p class="font-bold text-lg md:text-2xl lg:text-3xl">Fun fact about me</p>
+      <p class="font-bold text-xl md:text-2xl lg:text-3xl">Fun fact about me</p>
       <p class="md:text-lg">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
@@ -229,7 +229,7 @@
         >
       </div>
       <div class="flex flex-col gap-10 justify-center">
-        <p class="text-xl md:text-2xl lg:text-3xl font-bold">My Work Experience</p>
+        <p class="text-2xl lg:text-3xl font-bold">My Work Experience</p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
