--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
     </div>
 
     <div class="pb-28 md:pb-32">
-      <p class="text-lg lg:text-xl py-9">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
+      <p class="text-lg lg:text-xl py-9 max-w-xl">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </p>
 
       <a href="about">
@@ -112,162 +111,6 @@
       </a>
     </div>
 
-    <!-- <div class="flex flex-col">
-      <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">WORKS</p>
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
-        <div class="col-span-1 lg:col-span-2 grid grid-rows-1 lg:grid-rows-2 gap-5">
-          <div class="content h-full hidden lg:block">
-            <a href="graphic">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg h-full"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">Graphic Design</h3>
-              </div>
-            </a>
-          </div>
-          <div class="content block lg:hidden">
-            <a href="graphic">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">Graphic Design</h3>
-              </div>
-            </a>
-          </div>
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-            <div class="content h-full hidden lg:block">
-              <a href="web">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg h-full"
-                  src="images/web-cover.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Web Design</h3>
-                </div>
-              </a>
-            </div>
-            <div class="content block lg:hidden">
-              <a href="web">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg"
-                  src="images/web-cover-mobile.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Web Design</h3>
-                </div>
-              </a>
-            </div>
-            <div class="content h-full hidden lg:block">
-              <a href="furniture">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg h-full"
-                  src="images/furniture-cover.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Furniture Design</h3>
-                </div>
-              </a>
-            </div>
-            <div class="content block lg:hidden">
-              <a href="furniture">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg"
-                  src="images/furniture-cover-mobile.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Furniture Design</h3>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-span-1">
-          <div class="content h-full hidden lg:block">
-            <a href="3d">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg h-full w-full"
-                src="images/3d-projects-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
-            </a>
-          </div>
-          <div class="content block lg:hidden">
-            <a href="3d">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/3d-projects-cover-mobile.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="py-40 grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-60 text-black">
-      <div class="flex flex-col">
-        <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
-        <p class="text-base">
-          The design process should be fun and spark a conversation.
-          It can get saturated overtime, which is why I like involving myself
-          in carrying out a variety of design disciplines. Design should always
-          serve a purpose and provide a solution to a problem. I strive to create
-          designs that are fun and clean yet still focused on aligning design
-          choices with the goals and needs of the users.
-        </p>
-      </div>
-      <div class="flex flex-col">
-        <div class="grid grid-cols-1 gap-2">
-          <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
-          <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
-          <a href="about">
-            <button class="btn normal-case btn-neutral w-48">
-              about me
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-              </svg>
-            </button>
-          </a>
-        </div>
-        <div class="grid grid-cols-1 gap-2 pt-10">
-          <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR HEAD STRAIGHT TO MY RESUME</p>
-          <p class="text-base">A summary of my work experience.</p>
-          <a href="resume">
-            <button class="btn normal-case btn-neutral w-48">
-              resume
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-              </svg>
-            </button>
-          </a>
-        </div>
-      </div>
-    </div> -->
-
   </div>
 
   <!-- EXPLORE MY PORTFOLIO -->
@@ -278,7 +121,7 @@
 
       <a href="graphic">
         <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">graphic<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">graphic design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
@@ -293,7 +136,7 @@
 
       <a href="furniture">
         <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">furniture<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">furniture design</p>
           <img
             src="images/portfolio/Portfolio-Furniture.jpg"
             alt="image"
@@ -308,7 +151,7 @@
 
       <a href="3d">
         <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">3d<br/>visualization</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">3d visualization</p>
           <img
             src="images/portfolio/Portfolio-3D.jpg"
             alt="image"
@@ -323,7 +166,7 @@
 
       <a href="web">
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">web<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
@@ -351,7 +194,7 @@
         >
       </div>
       <div class="flex flex-col gap-10 justify-center">
-        <p class="text-xl md:text-2xl lg:text-3xl font-bold">My Work Experience</p>
+        <p class="text-2xl lg:text-3xl font-bold">My Work Experience</p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
