--- a/web.html
+++ b/web.html
@@ -124,7 +124,7 @@
 
       <a href="graphic">
         <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">graphic<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">graphic design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
@@ -139,7 +139,7 @@
 
       <a href="furniture">
         <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">furniture<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">furniture design</p>
           <img
             src="images/portfolio/Portfolio-Furniture.jpg"
             alt="image"
@@ -154,7 +154,7 @@
 
       <a href="3d">
         <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">3d<br/>visualization</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">3d visualization</p>
           <img
             src="images/portfolio/Portfolio-3D.jpg"
             alt="image"
@@ -169,7 +169,7 @@
 
       <a href="web">
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">web<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
