--- a/graphic.html
+++ b/graphic.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="./global.style.css">
+    <link rel="stylesheet" href="./carousel.style.css">
 
     <title>marina tatshani</title>
     <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
@@ -91,11 +92,33 @@
             </div>
           </div>
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/Goo/Goo-1.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-goo fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Goo/Goo-1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-goo fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Goo/Goo-2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-goo fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Goo/Goo-3.jpg"
+                  alt="image"
+                >
+              </div>
+              <a class="prev-graphic" onclick="plusSlidesGoo(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesGoo(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Branding, Packaging, Illustration • 2023</p>
               <p class="content-label-title">Goo Christmas Box</p>
@@ -104,22 +127,52 @@
         </div>
         <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/FFAF Frames/FFAF-Frame 1.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-ffafFrames fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/FFAF Frames/FFAF-Frame 1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-ffafFrames fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/FFAF Frames/FFAF-Frame 2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <a class="prev-graphic" onclick="plusSlidesFFAFFrames(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesFFAFFrames(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Corporate Branding, Print • 2023</p>
               <p class="content-label-title">FFAF Interior Branding</p>
             </div>
           </div>
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/Timberline Grove/TG-Brochure.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-timberline fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Timberline Grove/TG-Brochure.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-timberline fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Timberline Grove/TG-BC.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <a class="prev-graphic" onclick="plusSlidesTimberline(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesTimberline(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Branding, Print • 2024</p>
               <p class="content-label-title">Timberline Branding</p>
@@ -128,22 +181,68 @@
         </div>
         <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/FFAF Ad/FFAF-CB-1.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-ffafAd fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/FFAF Ad/FFAF-CB-1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-ffafAd fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/FFAF Ad/FFAF-CB-2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <a class="prev-graphic" onclick="plusSlidesFFAFAd(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesFFAFAd(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Corporate Branding, Social Media • 2023</p>
               <p class="content-label-title">FFAF Connecting Borders Ad</p>
             </div>
           </div>
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/Dune Culture/DC-1.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-dune fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Dune Culture/DC-1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-dune fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Dune Culture/DC-2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-dune fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Dune Culture/DC-3.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-dune fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/Dune Culture/DC-4.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <a class="prev-graphic" onclick="plusSlidesDune(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesDune(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Branding • 2024</p>
               <p class="content-label-title">Dune Logo Studies</p>
@@ -152,11 +251,26 @@
         </div>
         <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
           <div>
-            <img
-              class="content-image rounded-lg"
-              src="images/graphic/LLG Ads/LLG-Socials-1.jpg"
-              alt="image"
-            >
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-llgAds fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/LLG Ads/LLG-Socials-1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-llgAds fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic/LLG Ads/LLG-Socials-2.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <a class="prev-graphic" onclick="plusSlidesLLG(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesLLG(1)">&#10095;</a>
+            </div>
             <div class="content-label">
               <p class="content-label-header">Corporate Branding, Social Media • 2024</p>
               <p class="content-label-title">LLG Brand Awareness Ads</p>
@@ -499,7 +613,7 @@
 
       <a href="graphic">
         <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">graphic<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">graphic design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
@@ -514,7 +628,7 @@
 
       <a href="furniture">
         <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">furniture<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">furniture design</p>
           <img
             src="images/portfolio/Portfolio-Furniture.jpg"
             alt="image"
@@ -529,7 +643,7 @@
 
       <a href="3d">
         <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">3d<br/>visualization</p>
+          <p class="text-xl md:text-2xl max-w-36 leading-none">3d visualization</p>
           <img
             src="images/portfolio/Portfolio-3D.jpg"
             alt="image"
@@ -544,7 +658,7 @@
 
       <a href="web">
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
-          <p class="text-xl md:text-2xl">web<br/>design</p>
+          <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
@@ -584,6 +698,8 @@
       </div>
     </nav>
   </footer>
+
+  <script src="./carousel.js"></script>
 
   </body>
 </html>
