Updated web page, added whatsapp icon on footer, and updated text verbiages

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="./global.style.css">
-    <link rel="stylesheet" href="./carousel.style.css">
+    <link rel="stylesheet" href="./styles/carousel.style.css">>
 
     <title>marina tatshani</title>
     <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
@@ -148,15 +148,17 @@
               </div>
               <div class="col-span-1 lg:col-span-2 flex flex-col">
                 <p class="font-bold text-2xl pb-2">Associate Art Director at The JMarketing</p>
-                <p class="font-semibold text-lg pb-10">May 2021 - Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ontario, Canada</p>
+                <p class="font-semibold text-lg pb-10">May 2021 - Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Canada/Abu Dhabi</p>
                 <div class="text-lg">
                   <ul class="list-disc pl-5">
-                    <li>Responsible for the visual style and elements of our corporate clients in Canada and the US.</li>
-                    <li>Developing brand content for social media and websites.</li>
-                    <li>Designs social media campaigns mostly for corporate projects.</li>
-                    <li>Leads the design direction on website projects handed to me (mostly corporate brands such as manufacturing companies in Canada.)</li>
-                    <li>Creating graphic design content such as brand logos, design assets for websites, and brand identity.</li>
-                    <li>Creates motion graphic design content mostly for social media campaigns.</li>
+                    <li>Managed marketing and design projects targeting the North American and UAE markets.</li>
+                    <li>Enhanced clients’ social media presence through captivating static visuals and motion graphics, strengthening their brand identity.</li>
+                    <li>Elevated branding and rebranding initiatives by designing logos and impactful design assets that effectively communicate each company's mission.</li>
+                    <li>Prepared design presentations and proposal quotes for client submissions.</li>
+                    <li>Amplified clients’ branding through website design, including the creation of sitemaps, frameworks, prototypes, and custom icon designs.</li>
+                    <li>Analyzed SEO data to optimize social media content designs for better performance.</li>
+                    <li>Developed custom showreels and motion graphics for social media and corporate presentations.</li>
+
                   </ul>
                 </div>
               </div>
@@ -179,8 +181,11 @@
                 <p class="font-semibold text-lg pb-10">June 2020 - Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Philippines</p>
                 <div class="text-lg">
                   <ul class="list-disc pl-5">
-                    <li>Produces 3D animations and product renders catering to small businesses for their social media content posts.</li>
-                    <li>Produces graphic design content and designs the brand identity of small businesses in the Philippines (such as logo design, brand book and the likes.)</li>
+                    <li>Designed and enhanced social media advertisements utilizing 3D visualization and 3D animation.</li>
+                    <li>Developed customized 3D design assets aligned with clients’ branding.</li>
+                    <li>Enhanced my brand's social media presence through targeted paid Instagram ads.</li>
+                    <li>Conducted client briefings to outline campaign scopes and prepared contracts and agreements.</li>
+                    <li>Accepted a variety of graphic design projects, including packaging design, logo design, and social media advertisements.</li>
                   </ul>
                 </div>
               </div>
@@ -203,12 +208,13 @@
                 <p class="font-semibold text-lg pb-10">May 2018 - May 2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cebu, Philippines</p>
                 <div class="text-lg">
                   <ul class="list-disc pl-5">
-                    <li>Create and conceptualizes new product designs for home furniture, lighting, home accessories etc.</li>
-                    <li>Produces 3D model designs of furniture and interior spaces.</li>
-                    <li>Manage and supervise furniture and design projects for both residential and commercial projects in the Philippines.</li>
-                    <li>Prepares initial AutoCad drawings for manufacturing.</li>
-                    <li>Coordinates with suppliers and contractors in managing projects.</li>
-                    <li>Designed major projects under the Vito Selma brand for Okada Manila, Rosche Bobois, Ayala Malls, and Vogue Italia.</li>
+                    <li>Designed bespoke custom furniture for luxury residential and commercial clients.</li>
+                    <li>Conceptualized interior design solutions for commercial projects, including reception areas, furniture, wall fixtures, and planters for prominent companies in the Philippines, such as Okada and Ayala Malls.</li>
+                    <li>Contributed to the company’s Vogue Italia fashion feature by incorporating innovative materials used to make furniture.</li>
+                    <li>Prepared 3D models and AutoCAD drawings of approved furniture designs for production.</li>
+                    <li>Conceptualized and designed the company’s booth for premier design trade shows.</li>
+                    <li>Engaged with customers during trade shows, providing sales support and fostering client relationships.</li>
+                    <li>Managed project timelines and coordinated with various suppliers on large commercial projects.</li>
                   </ul>
                 </div>
               </div>
@@ -231,11 +237,10 @@
                 <p class="font-semibold text-lg pb-10">October 2017 - May 2018&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manila, Philippines</p>
                 <div class="text-lg">
                   <ul class="list-disc pl-5">
-                    <li>Coordinates with the company's partner in China for the design production.</li>
-                    <li>Conceptualizes the design for office furniture (global market) and home furniture (local market) designs.</li>
-                    <li>Creates sketches, 3D models, and rendered photos for each furniture design.</li>
-                    <li>Prepares AutoCad drawings for quotations and production.</li>
-                    <li>Responsible for the overall visual design and direction.</li>
+                    <li>Designed innovative and ergonomic modern office furniture for corporate clients and office environments.</li>
+                    <li>Coordinated effectively with manufacturers in China to ensure design specifications were met during the preparation of AutoCAD drawings.</li>
+                    <li>Created 3D models of furniture designs and produced interior visualizations.</li>
+                    <li>Conducted research on material specifications for application in custom products.</li>
                   </ul>
                 </div>
               </div>
@@ -372,11 +377,16 @@
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg>
         </a>
+        <a href="https://wa.me/9062907171" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+          </svg>
+        </a>
       </div>
     </aside>
     <nav class="grid-flow-col md:place-self-center md:justify-self-end">
       <div class="flex flex-col text-base">
-        <p>© Copyright 2023</p>
+        <p>© Copyright 2024</p>
         <p>All right reserved.</p>
       </div>
     </nav>
