--- a/about.html
+++ b/about.html
@@ -83,12 +83,14 @@
           </span>
         </p>
         <p class="text-base lg:text-lg max-w-3xl pb-20">
-          After university in 2017, I worked as a Furniture Designer catering to high-end residential and commercial
-          clients that honed my 3D modeling and rendering skills. When the pandemic came in during 2020, I started
-          freelancing on the side as a 3D animator that taps small businesses requiring fun and captivating social media
-          content which eventually led me to create static design content and social media branding for my clients.
-          After four years in the furniture industry and a year of mixing it with my freelance design gig,
-          I eventually landed a position as an Associate Art Director for a Canadian-based startup advertising agency.
+          Right after university, I jumped into my first role as a Furniture Designer,
+          which soon had me working with one of Southeast Asia’s leading designers and
+          sharpening my 3D design skills. During the pandemic, I freelanced on the side,
+          helping small to medium-sized businesses amp up their social media with
+          creative 3D content and animation. That’s when I found myself diving deeper
+          into graphic design and social media. Oh, and in the middle of all that,
+          I won an International Design Award that took me to Italy for a short course,
+          where I lived the dream for three months!
         </p>
 
         <!-- YOGA, CAMPING, CACAO DRINKER ICONS -->
@@ -127,7 +129,7 @@
     <!-- SPECIAL AWARDS AND EDUCATION -->
     <div class="grid grid-cols-1 gap-10 lg:grid-cols-5 py-16 md:py-28">
       <!-- SPECIAL AWARDS -->
-      <div class="col-span-1 lg:col-span-2 py-14 pl-14 pr-10 about-me-box">
+      <div class="col-span-1 py-10 pl-14 pr-10 md:py-14 lg:col-span-2 about-me-box">
         <div class="flex flex-row justify-between items-center pb-5">
           <p class="font-bold text-2xl md:text-3xl">SPECIAL AWARDS</p>
           <img
@@ -153,7 +155,7 @@
       </div>
 
       <!-- EDUCATION -->
-      <div class="col-span-1 lg:col-span-3 py-14 pl-14 pr-10 about-me-box">
+      <div class="col-span-1 py-10 pl-14 pr-10 md:py-14 lg:col-span-3 about-me-box">
         <div class="flex flex-row justify-between items-center pb-5">
           <p class="font-bold text-2xl md:text-3xl">EDUCATION</p>
           <img
@@ -185,34 +187,36 @@
   <div class="about-me-section grid grid-cols-1 md:grid-cols-2">
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-52">
       <p class="font-bold text-xl md:text-2xl lg:text-3xl">My definition of fun</p>
-      <p class="md:text-lg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      <p class="md:text-lg max-w-xl">
+        I thrive on adventures and love embracing new experiences.
+        Like when my parents asked what I wanted for my graduation gift,
+        I skipped the material items and opted for a skydiving experience
+        instead (which was way cheaper than a new iPhone.)
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-36">
       <p class="font-bold text-xl md:text-2xl lg:text-3xl">How I spend my weekend</p>
-      <p class="md:text-lg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      <p class="md:text-lg max-w-xl">
+        On weekends, I prefer doing activities that nourish my
+        soul—reading peacefully at a café, running in nature,
+        or simply being present at the beach. I prefer to feel like I am actually “living.”
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-52">
       <p class="font-bold text-xl md:text-2xl lg:text-3xl">What I am not</p>
-      <p class="md:text-lg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      <p class="md:text-lg max-w-xl">
+        A spoiled brat. I grew up as an only child with a single mom
+        and this upbringing taught me the value of independence while
+        also being considerate and empathetic towards others,
+        shaping me into the person I am today.
       </p>
     </div>
     <div class="flex flex-col gap-8 pl-10 pr-10 md:pl-20 lg:pl-36">
       <p class="font-bold text-xl md:text-2xl lg:text-3xl">Fun fact about me</p>
-      <p class="md:text-lg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      <p class="md:text-lg max-w-xl">
+        I’m fun-sized at 4'11"! My friends and family love calling me
+        "Small but Terrible" because I’m always pushing boundaries
+        and diving into exciting experiences at this height!
       </p>
     </div>
   </div>
@@ -230,11 +234,10 @@
       </div>
       <div class="flex flex-col gap-10 justify-center">
         <p class="text-2xl lg:text-3xl font-bold">My Work Experience</p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco<br/>
-          laboris nisi ut aliquip ex ea commodo consequat.
+        <p class="max-w-xl md:text-lg">
+          Learn more about my professional journey navigating the worlds of 3D, branding, advertising,
+          furniture design, and motion graphics over the years. Discover how I transitioned from one
+          path to another—everyone has their own story.
         </p>
         <a href="resume">
           <button class="btn normal-case btn-neutral w-52">
@@ -263,11 +266,16 @@
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg>
         </a>
+        <a href="https://wa.me/9062907171" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+          </svg>
+        </a>
       </div>
     </aside>
     <nav class="grid-flow-col md:place-self-center md:justify-self-end">
       <div class="flex flex-col text-base">
-        <p>© Copyright 2023</p>
+        <p>© Copyright 2024</p>
         <p>All right reserved.</p>
       </div>
     </nav>
