--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </div>
 
     <div class="pb-28 md:pb-32">
-      <p class="text-lg lg:text-xl py-9 max-w-xl">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <p class="text-lg lg:text-xl py-9 max-w-2xl">
+        A lil’ bit of everything in between with a keen eye for aesthetics and a strong foundation in cutting-edge design principles,
+        I create visually compelling solutions that enhance brand narratives and transform spaces. Welcome to my world!
       </p>
 
       <a href="about">
@@ -123,7 +123,7 @@
         <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">graphic design</p>
           <img
-            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            src="images/portfolio/Graphic Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -138,7 +138,7 @@
         <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">furniture design</p>
           <img
-            src="images/portfolio/Portfolio-Furniture.jpg"
+            src="images/portfolio/Furniture Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -153,7 +153,7 @@
         <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">3d visualization</p>
           <img
-            src="images/portfolio/Portfolio-3D.jpg"
+            src="images/portfolio/3D Visualization.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -168,7 +168,7 @@
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
-            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            src="images/portfolio/Graphic Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -195,11 +195,10 @@
       </div>
       <div class="flex flex-col gap-10 justify-center">
         <p class="text-2xl lg:text-3xl font-bold">My Work Experience</p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br/>
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco<br/>
-          laboris nisi ut aliquip ex ea commodo consequat.
+        <p class="max-w-xl md:text-lg">
+          Learn more about my professional journey navigating the worlds of 3D, branding, advertising,
+          furniture design, and motion graphics over the years. Discover how I transitioned from one
+          path to another—everyone has their own story.
         </p>
         <a href="resume">
           <button class="btn normal-case btn-neutral w-52">
@@ -228,11 +227,16 @@
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg>
         </a>
+        <a href="https://wa.me/9062907171" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+          </svg>
+        </a>
       </div>
     </aside>
     <nav class="grid-flow-col md:place-self-center md:justify-self-end">
       <div class="flex flex-col text-base">
-        <p>© Copyright 2023</p>
+        <p>© Copyright 2024</p>
         <p>All right reserved.</p>
       </div>
     </nav>
