--- a/web.html
+++ b/web.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="./global.style.css">
+    <link rel="stylesheet" href="./styles/carousel.style.css">
 
     <title>marina tatshani</title>
     <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
@@ -60,60 +61,176 @@
 
   <div class="main">
     <!-- HEADER -->
-    <div class="flex flex-col pt-28 pb-16">
-        <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2022</p>
-        <p class="font-bold text-5xl lg:text-6xl pb-4">Website Design</p>
-        <p class="text-lg">Selected works from my design projects during my position as an Associate Art Director.</p>
+    <div class="flex flex-col pt-10 pb-20">
+      <img
+        src="images/icons/Icon - Graphic Design.png"
+        alt="image"
+        width="250"
+        height="250"
+      />
+      <p class="font-bold text-5xl lg:text-6xl pb-5">Website Design</p>
+      <p class="text-lg max-w-xl">
+        This page showcases the websites I designed and contributed
+        to during my work at an advertising agency.
+        These projects encompass a range of corporate initiatives
+        aimed at modernizing user experiences, amplifying
+        the company’s branding, and enhancing customer engagement.
+      </p>
     </div>
 
     <!-- GALLERY -->
-    <div class="grid grid-cols-1 gap-16">
+    <div class="grid grid-cols-1 gap-16 pb-24">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
           <div class="content">
-              <!-- <a href=""> -->
-                  <div class="content-overlay"></div>
-                  <img
-                    class="content-image rounded-lg"
-                    src="images/web/Website Mockup (1).png"
-                    alt="image"
-                  >
-                  <div class="content-details fadeIn-top">
-                  <h3 class="content-title">SyBridge</h3>
-                  </div>
-              <!-- </a> -->
+            <img
+              class="content-image rounded-lg"
+              src="images/web/Timberline/Timberline-1.jpg"
+              alt="image"
+            >
+            <div class="content-label">
+              <a class="web-label-title flex flex-row gap-5" href="https://timberlinegrove.com/" target="_blank">
+                Timberline Web Teaser
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8">
+                    <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+                  </svg>
+                </button>
+              </a>
+            </div>
           </div>
           <div class="content">
-              <!-- <a href=""> -->
-                  <div class="content-overlay"></div>
-                  <img
-                    class="content-image rounded-lg"
-                    src="images/web/Website Mockup 1.png"
-                    alt="image"
-                  >
-                  <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Lachies Lobster Pan</h3>
-                  </div>
-              <!-- </a> -->
+            <div class="slideshow-container-graphic">
+              <div class="mySlides-nextgen fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/web/NextGen/NG-1.jpg"
+                  alt="image"
+                >
+              </div>
+
+              <div class="mySlides-nextgen fade">
+                <img
+                  class="content-image rounded-lg"
+                  src="images/web/NextGen/NG-2.jpg"
+                  alt="image"
+                >
+              </div>
+              <a class="prev-graphic" onclick="plusSlidesNextGen(-1)">&#10094;</a>
+              <a class="next-graphic" onclick="plusSlidesNextGen(1)">&#10095;</a>
+            </div>
+            <div class="content-label">
+              <a class="web-label-title flex flex-row gap-5" href="https://nextgenmold.com/" target="_blank">
+                NextGen Rebranded Website
+                <button>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8">
+                    <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+                  </svg>
+                </button>
+              </a>
+            </div>
           </div>
       </div>
-      <div class="grid grid-cols-1 lg:grid-cols-4 gap-16">
-        <div class="content lg:col-start-2 lg:col-span-2">
-          <!-- <a href=""> -->
-              <div class="content-overlay"></div>
+
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
+        <div class="content">
+          <div class="slideshow-container-graphic">
+            <div class="mySlides-sequel fade">
               <img
                 class="content-image rounded-lg"
-                src="images/web/Mission Machining.png"
+                src="images/web/Sequel/Sequel-1.jpg"
                 alt="image"
               >
-              <div class="content-details fadeIn-top">
-              <h3 class="content-title">Mission Machining</h3>
-              </div>
-          <!-- </a> -->
+            </div>
+
+            <div class="mySlides-sequel fade">
+              <img
+                class="content-image rounded-lg"
+                src="images/web/Sequel/Sequel-2.jpg"
+                alt="image"
+              >
+            </div>
+            <a class="prev-graphic" onclick="plusSlidesSequel(-1)">&#10094;</a>
+            <a class="next-graphic" onclick="plusSlidesSequel(1)">&#10095;</a>
+          </div>
+          <div class="content-label">
+            <a class="web-label-title flex flex-row gap-5" href="https://drive.google.com/file/d/1rzIquMim74m2PWIXo1pcS-3GKXJcuu5B/view?usp=drive_link" target="_blank">
+              Sequel Website
+              <button>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8">
+                  <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </a>
+          </div>
+        </div>
+        <div class="content">
+          <div class="slideshow-container-graphic">
+            <div class="mySlides-llg fade">
+              <img
+                class="content-image rounded-lg"
+                src="images/web/LLG/LLG-1.jpg"
+                alt="image"
+              >
+            </div>
+
+            <div class="mySlides-llg fade">
+              <img
+                class="content-image rounded-lg"
+                src="images/web/LLG/LLG-2.jpg"
+                alt="image"
+              >
+            </div>
+            <a class="prev-graphic" onclick="plusSlidesLLG(-1)">&#10094;</a>
+            <a class="next-graphic" onclick="plusSlidesLLG(1)">&#10095;</a>
+          </div>
+          <div class="content-label">
+            <a class="web-label-title flex flex-row gap-5" href="https://drive.google.com/file/d/1xiZiRLhELsA_vdF8mcHxN7T1rnMAd-06/view?usp=drive_link" target="_blank">
+              LLG Landing Page Site
+              <button>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8">
+                  <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid grid-cols-1 lg:grid-cols-4 gap-16">
+        <div class="content lg:col-start-2 lg:col-span-2">
+          <div class="slideshow-container-graphic">
+            <div class="mySlides-srl fade">
+              <img
+                class="content-image rounded-lg"
+                src="images/web/SRL/SRL-1.jpg"
+                alt="image"
+              >
+            </div>
+
+            <div class="mySlides-srl fade">
+              <img
+                class="content-image rounded-lg"
+                src="images/web/SRL/SRL-1.jpg"
+                alt="image"
+              >
+            </div>
+            <a class="prev-graphic" onclick="plusSlidesSRL(-1)">&#10094;</a>
+            <a class="next-graphic" onclick="plusSlidesSRL(1)">&#10095;</a>
+          </div>
+          <div class="content-label">
+            <a class="web-label-title flex flex-row gap-5" href="https://scotiarecycling.com/" target="_blank">
+              SRL Rebranded Website
+              <button>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-8 h-8">
+                  <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="py-14"></div>
   </div>
 
   <!-- EXPLORE MY PORTFOLIO -->
@@ -126,7 +243,7 @@
         <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">graphic design</p>
           <img
-            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            src="images/portfolio/Graphic Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -141,7 +258,7 @@
         <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">furniture design</p>
           <img
-            src="images/portfolio/Portfolio-Furniture.jpg"
+            src="images/portfolio/Furniture Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -156,7 +273,7 @@
         <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-36 leading-none">3d visualization</p>
           <img
-            src="images/portfolio/Portfolio-3D.jpg"
+            src="images/portfolio/3D Visualization.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -171,7 +288,7 @@
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
-            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            src="images/portfolio/Graphic Design.png"
             alt="image"
           >
           <button class="portfolio-button">
@@ -200,15 +317,22 @@
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg>
         </a>
+        <a href="https://wa.me/9062907171" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+          </svg>
+        </a>
       </div>
     </aside>
     <nav class="grid-flow-col md:place-self-center md:justify-self-end">
       <div class="flex flex-col text-base">
-        <p>© Copyright 2023</p>
+        <p>© Copyright 2024</p>
         <p>All right reserved.</p>
       </div>
     </nav>
   </footer>
+
+  <script src="./script/web-carousel.js"></script>
 
   </body>
 </html>
