Updated download my resume link

--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
         <p class="max-w-xl md:text-lg">
           Learn more about my professional journey navigating the worlds of 3D, branding, advertising,
           furniture design, and motion graphics over the years. Discover how I transitioned from one
-          path to another—everyone has their own story.
+          path to another—each has their own story.
         </p>
         <a href="resume">
           <button class="btn normal-case btn-neutral w-52">
