--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 
     <div class="pb-28 md:pb-32">
       <p class="text-lg lg:text-xl py-9 max-w-2xl">
-        A lil’ bit of everything in between with a keen eye for aesthetics and a strong foundation in cutting-edge design principles,
-        I create visually compelling solutions that enhance brand narratives and transform spaces. Welcome to my world!
+        A lil’ bit of everything in between with a keen eye for aesthetics
+        and a strong foundation in cutting-edge design principles.
+        I create visually compelling solutions that enhance brand
+        narratives and transform spaces. Welcome to my world!
       </p>
 
       <a href="about">
@@ -198,7 +200,7 @@
         <p class="max-w-xl md:text-lg">
           Learn more about my professional journey navigating the worlds of 3D, branding, advertising,
           furniture design, and motion graphics over the years. Discover how I transitioned from one
-          path to another—everyone has their own story.
+          path to another—each has their own story.
         </p>
         <a href="resume">
           <button class="btn normal-case btn-neutral w-52">
