--- a/resume.html
+++ b/resume.html
@@ -107,7 +107,7 @@
       </div>
       <!-- DOWNLOAD MY RESUME -->
       <div class="flex flex-col items-center lg:items-start">
-        <a href="https://drive.google.com/file/d/1MsrKzGpLZxQS3ZtPOi2n9YuUuUMmN01P/view?fbclid=IwAR2JpwG0VvWnfjEGtdN0HS7gj_1LKT9RcSHwEfNXYJehhLem4xoLNZN1Kc4" target="_blank" class="pb-2">
+        <a href="https://drive.google.com/file/d/1fikL_7vpbb30RTTl58_ifaEv9FqydgLF/view?usp=sharing" target="_blank" class="pb-2">
           <button class="btn normal-case btn-neutral w-72">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
