--- a/web.html
+++ b/web.html
@@ -62,12 +62,13 @@
   <div class="main">
     <!-- HEADER -->
     <div class="flex flex-col pt-10 pb-20">
-      <img
+      <!-- <img
         src="images/icons/Icon - Graphic Design.png"
         alt="image"
         width="250"
         height="250"
-      />
+      /> -->
+      <span class="pt-5">
       <p class="font-bold text-5xl lg:text-6xl pb-5">Website Design</p>
       <p class="text-lg max-w-xl">
         This page showcases the websites I designed and contributed
