Updated web design photo

--- a/3d.html
+++ b/3d.html
@@ -334,7 +334,7 @@
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
-            src="images/portfolio/Graphic Design.png"
+            src="images/portfolio/Web Design.png"
             alt="image"
           >
           <button class="portfolio-button">
