--- a/web.html
+++ b/web.html
@@ -199,25 +199,11 @@
 
       <div class="grid grid-cols-1 lg:grid-cols-4 gap-16">
         <div class="content lg:col-start-2 lg:col-span-2">
-          <div class="slideshow-container-graphic">
-            <div class="mySlides-srl fade">
-              <img
-                class="content-image rounded-lg"
-                src="images/web/SRL/SRL-1.jpg"
-                alt="image"
-              >
-            </div>
-
-            <div class="mySlides-srl fade">
-              <img
-                class="content-image rounded-lg"
-                src="images/web/SRL/SRL-1.jpg"
-                alt="image"
-              >
-            </div>
-            <a class="prev-graphic" onclick="plusSlidesSRL(-1)">&#10094;</a>
-            <a class="next-graphic" onclick="plusSlidesSRL(1)">&#10095;</a>
-          </div>
+          <img
+            class="content-image rounded-lg"
+            src="images/web/SRL/SRL-1.jpg"
+            alt="image"
+          >
           <div class="content-label">
             <a class="web-label-title flex flex-row gap-5" href="https://scotiarecycling.com/" target="_blank">
               SRL Rebranded Website
@@ -289,7 +275,7 @@
         <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
           <p class="text-xl md:text-2xl max-w-24 leading-none">web design</p>
           <img
-            src="images/portfolio/Graphic Design.png"
+            src="images/portfolio/Web Design.png"
             alt="image"
           >
           <button class="portfolio-button">
